--- a/package.json
+++ b/package.json
@@ -3,26 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@hookform/resolvers": "^2.9.7",
     "@material-ui/styles": "^4.11.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.2.0",
+    "react-confetti": "^6.0.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
+    "react-dropzone": "^11.0.3",
+    "react-hook-form": "^6.4.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
+    "sweetalert2": "^9.17.1",
     "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:server": "node ./server.js",
+    "dev": "concurrently --kill-others \"npm run start:server\" \"npm run start\"" 
   },
   "eslintConfig": {
     "extends": [
