--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "emailjs-com": "^3.2.0",
+    "formik": "^2.2.9",
     "react": "^16.13.1",
     "react-confetti": "^6.0.0",
     "react-dom": "^16.13.1",
@@ -19,9 +22,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
-    "sweetalert2": "^9.17.1",
+    "sweetalert2": "^9.17.2",
     "web-vitals": "^2.1.4",
+    "yarn-audit-fix": "^9.3.5",
     "yup": "^0.32.11"
   },
   "scripts": {
