--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
+    "payhere-js-sdk": "^1.0.1",
     "react": "^16.13.1",
     "react-confetti": "^6.0.0",
     "react-dom": "^16.13.1",
