--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-confetti": "^6.0.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
+    "react-highlight-words": "^0.18.0",
     "react-hook-form": "^7.34.1",
     "react-icons": "^4.4.0",
     "react-router-dom": "^5.2.0",
