--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "emailjs-com": "^3.2.0",
     "formik": "^2.2.9",
     "payhere-js-sdk": "^1.0.1",
-    "react": "^16.13.1",
+    "react": "18",
+    "react-collapsed": "^3.4.0",
     "react-confetti": "^6.0.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
@@ -72,4 +73,8 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
   }
+
 }
+
+
+
