--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.2.9",
     "payhere-js-sdk": "^1.0.1",
     "react": "^16.13.1",
+    "react-collapsed": "^3.3.2",
     "react-confetti": "^6.0.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.3",
